--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,57 +1,69 @@
-<%= form_for(@contact) do |f| %>
-  <% if @contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
+<div class="text-center">
+  <%= form_for(@contact) do |f| %>
+    <% if @contact.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
 
-      <ul>
-      <% @contact.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% @contact.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 col-md-offset-4">
+          <%= f.label :first_name, "First Name" %><br>
+          <%= f.text_field :first_name %>
+        </div>
+        <div class="col-md-2">
+          <%= f.label :last_name, "Last Name" %><br>
+          <%= f.text_field :last_name %>
+        </div>
+      </div><br>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-4">
+          <%= f.label :company %><br>
+          <%= f.text_field :company %>
+        </div>
+        <div class="col-md-2">
+          <%= f.label :email %><br>
+          <%= f.text_field :email %>
+        </div>
+      </div><br>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-4">
+          <%= f.label :phone_number, "Phone Number" %><br>
+          <%= f.telephone_field :phone_number %>
+        </div>
+        <div class="col-md-2">
+          <%= f.label :point_person, "Point Person" %><br>
+          <%= f.text_field :point_person %>
+        </div>
+      </div><br>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-4">
+          <%= f.label :involvement %><br>
+          <%= f.text_area :involvement %>
+        </div>
+        <div class="col-md-2">
+          <%= f.label :open_asks, "Open Asks" %><br>
+          <%= f.text_area :open_asks %>
+        </div>
+      </div><br>
+      <div class="field">
+        <%= f.label :alumni, "CORE Alumni" %>
+        <%= f.check_box :alumni %>
+      </div>
+      <div class="field">
+        <%= f.label :photo_url, "Photo URL" %><br>
+        <%= f.text_field :photo_url %>
+      </div>
+      <div class="actions">
+        <%= f.submit "Submit", :class => "btn btn-success" %>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :first_name, "First Name" %><br>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name, "Last Name" %><br>
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :company, "Company" %><br>
-    <%= f.text_field :company %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :phone_number, "Phone Number" %><br>
-    <%= f.telephone_field :phone_number %>
-  </div>
-  <div class="field">
-    <%= f.label :point_person, "Point Person" %><br>
-    <%= f.text_field :point_person %>
-  </div>
-  <div class="field">
-    <%= f.label :involvement %><br>
-    <%= f.text_field :involvement %>
-  </div>
-  <div class="field">
-    <%= f.label :open_asks, "Open Asks" %><br>
-    <%= f.text_field :open_asks %>
-  </div>
-  <div class="field">
-    <%= f.label :alumni, "CORE Alumni" %><br>
-    <%= f.check_box :alumni %>
-  </div>
-  <div class="field">
-    <%= f.label :photo_url, "Photo URL" %><br>
-    <%= f.text_field :photo_url %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Submit" %>
-  </div>
-<% end %>
+    <% end %>
+</div>
