--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Contact</h1>
+<div class="text-center">
+<h1>Edit Contact</h1><br>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @contact %> |
 <%= link_to 'Back', contacts_path %>
+</div>
