--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="text-center">
-<h1>Contacts</h1>
+<h1>CORE Contacts</h1>
 
 <br>
 <a href="<%= new_contact_path %>"><button type="button" class="btn btn-default">New Contact</button></a>
@@ -11,6 +11,7 @@
   <thead>
     <tr>
       <th class="text-center">Name</th>
+      <th class="text-center">Company</th>
       <th class="text-center">Email</th>
       <th class="text-center">Phone Number</th>
       <th class="text-center">Point Person</th>
@@ -27,6 +28,7 @@
             (A)
           <% end %>
         </td>
+        <td><%= contact.company %></td>
         <td><%= contact.email %></td>
         <td><%= contact.phone_number %></td>
         <td><%= contact.point_person %></td>
