--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Contact</h1>
+<div class="text-center">
+<h1>New Contact</h1><br>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', contacts_path %>
+</div>
