Update styling for forms

--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,16 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<h2>
-  <%= @contact.first_name %> <%= @contact.last_name %>
-  <% if @contact.alumni? %>
-    (A)
+<div class="text-center">
+  <img src="<%= @contact.photo_url %>" style="max-width: 250px; max-height: 250px;">
+  <h2>
+    <%= @contact.first_name %> <%= @contact.last_name %>
+    <% if @contact.alumni? %>
+      (A)
+    <% end %>
+  </h2>
+  <b>Email</b>: <%= @contact.email %><br>
+  <% if @contact.phone_number? %>
+    <b>Phone Number</b>: <%= @contact.phone_number %><br>
   <% end %>
-</h2>
-Email: <%= @contact.email %><br>
-<% if @contact.phone_number? %>
-  Phone Number: <%= @contact.phone_number %><br>
-<% end %>
-Point Person: <%= @contact.point_person %><br>
+  <b>Point Person</b>: <%= @contact.point_person %><br>
+  <b>Involvement</b>: <%= @contact.involvement %><br>
+  <b>Open Asks</b>: <%= @contact.open_asks %><br>
 
-<%= link_to 'Edit', edit_contact_path(@contact) %> |
-<%= link_to 'Back', contacts_path %>
+  <br>
+  <%= link_to 'Edit', edit_contact_path(@contact) %> |
+  <%= link_to 'Back', contacts_path %>
+</div>
