Add support for roles in views

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -12,6 +12,7 @@
     <tr>
       <th class="text-center">Name</th>
       <th class="text-center">Company</th>
+      <th class="text-center">Role</th>
       <th class="text-center">Email</th>
       <th class="text-center">Phone Number</th>
       <th class="text-center">Point Person</th>
@@ -29,6 +30,7 @@
           <% end %>
         </td>
         <td><%= contact.company %></td>
+        <td><%= contact.role %></td>
         <td><%= contact.email %></td>
         <td><%= contact.phone_number %></td>
         <td><%= contact.point_person %></td>
