Add sortable table columns

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -3,7 +3,7 @@
 <div class="text-center">
 
 <br>
-<table class="table">
+<table id="contacts" class="table tablesorter">
   <thead>
     <tr>
       <th class="text-center">Name</th>
