--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -12,7 +12,7 @@
       <th class="text-center">Email</th>
       <th class="text-center">Phone Number</th>
       <th class="text-center">Point Person</th>
-      <th class="text-center" colspan="3">Options</th>
+      <th class="text-center sorter-false" colspan="3">Options</th>
     </tr>
   </thead>
 
