--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -15,27 +15,27 @@
     <div class="container">
       <div class="row">
         <div class="col-md-2 col-md-offset-4">
-          <%= f.label :first_name, "First Name" %><br>
+          <%= f.label :first_name, "First Name*" %><br>
           <%= f.text_field :first_name %>
         </div>
         <div class="col-md-2">
-          <%= f.label :last_name, "Last Name" %><br>
+          <%= f.label :last_name, "Last Name*" %><br>
           <%= f.text_field :last_name %>
         </div>
       </div><br>
       <div class="row">
         <div class="col-md-2 col-md-offset-4">
-          <%= f.label :company %><br>
+          <%= f.label :company, "Company*" %><br>
           <%= f.text_field :company %>
         </div>
         <div class="col-md-2">
-          <%= f.label :role %><br>
+          <%= f.label :role, "Role*" %><br>
           <%= f.text_field :role %>
         </div>
       </div><br>
       <div class="row">
         <div class="col-md-2 col-md-offset-4">
-          <%= f.label :email %><br>
+          <%= f.label :email, "Email*" %><br>
           <%= f.text_field :email %>
         </div>
         <div class="col-md-2">
@@ -45,7 +45,7 @@
       </div><br>
       <div class="row">
         <div class="col-md-2 col-md-offset-4">
-          <%= f.label :point_person, "Point Person" %><br>
+          <%= f.label :point_person, "Point Person*" %><br>
           <%= f.text_field :point_person %>
         </div>
         <div class="col-md-2">
@@ -55,7 +55,7 @@
       </div><br>
       <div class="row">
         <div class="col-md-2 col-md-offset-4">
-          <%= f.label :involvement %><br>
+          <%= f.label :involvement, "Inovlvement*" %><br>
           <%= f.text_area :involvement %>
         </div>
         <div class="col-md-2">
