--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -3,7 +3,7 @@
 <div class="text-center">
   <h1>Contacts</h1>
 
-  <table id="contacts" class="table tablesorter">
+  <table id="contacts" class="table table-striped tablesorter">
     <thead>
       <tr>
         <th class="text-center">Name</th>
