Add favicon and correct typo in form

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -55,7 +55,7 @@
       </div><br>
       <div class="row">
         <div class="col-md-2 col-md-offset-4">
-          <%= f.label :involvement, "Inovlvement*" %><br>
+          <%= f.label :involvement, "Involvement*" %><br>
           <%= f.text_area :involvement %>
         </div>
         <div class="col-md-2">
