Add fix for rendering Google Fonts correctly

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,14 @@
  *= require jquery-tablesorter/theme.bootstrap
  */
 
+body {
+    -webkit-animation-delay: 0.1s;
+    -webkit-animation-name: fontfix;
+    -webkit-animation-duration: 0.1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: linear;
+}
+
 textarea {
     resize: none;
 }
@@ -43,4 +51,9 @@ thead th.down {
     background-position: right center;
     background-repeat: no-repeat;
     background-color: transparent;
+}
+
+@-webkit-keyframes fontfix {
+    from { opacity: 1; }
+    to   { opacity: 1; }
 }
