Update form with new model for contacts and add Twemoji

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,6 +57,11 @@ thead th.down {
     background-color: transparent;
 }
 
+.row.text-center > div {
+    display: inline-block;
+    float: none;
+}
+
 @-webkit-keyframes fontfix {
     from { opacity: 1; }
     to   { opacity: 1; }
