--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -54,6 +54,15 @@
       </div>
       </div><br>
       <div class="row">
+        <%= f.label :relationship_strength, "Relationship*" %><br>
+            <%= f.radio_button :relationship_strength, 1 %>
+            &#x1F525;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <%= f.radio_button :relationship_strength, 2 %>
+            &#x1F525; &#x1F525;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <%= f.radio_button :relationship_strength, 3 %>
+            &#x1F525; &#x1F525; &#x1F525;
+      </div><br>
+      <div class="row">
         <div class="col-md-2 col-md-offset-4">
           <%= f.label :involvement, "Involvement*" %><br>
           <%= f.text_area :involvement %>
@@ -63,9 +72,15 @@
           <%= f.text_area :open_asks %>
         </div>
       </div><br>
-      <div class="field">
-        <%= f.label :alumni, "CORE Alumni" %>
-        <%= f.check_box :alumni %>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-4">
+          <%= f.label :core_alumni, "CORE Alumni" %>
+          <%= f.check_box :core_alumni %>
+        </div>
+        <div class="col-md-2">
+          <%= f.label :columbia_alumni, "Columbia Alumni" %>
+          <%= f.check_box :columbia_alumni %>
+        </div>
       </div><br>
       <div class="actions">
         <%= f.submit "Submit", :class => "btn btn-success" %>
