--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,17 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+  <script src="//twemoji.maxcdn.com/twemoji.min.js"></script>
   <%= csrf_meta_tags %>
   <%= render "layouts/navbar" %>
 </head>
 <body>
 
 <%= yield %>
+
+<script type="text/javascript">
+  twemoji.parse(document.body, {size: 16});
+</script>
 
 </body>
 </html>
