--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,10 @@
 <div class="text-center">
+  <% flash.each do |key, value| %>
+    <p class="alert alert-<%= key %>"><%= value %></p>
+  <% end %>
   <h1>Edit User</h1>
 
   <%= render 'form' %>
 
-  <%= link_to 'Show', @user %> |
   <%= link_to 'Back', users_path %>
 </div>
