--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -45,7 +45,7 @@
     <div class="row">
       <div class="col-md-2 col-md-offset-4">
         <%= f.label :point_person, "Point Person*" %><br>
-        <%= f.text_field :point_person %>
+        <%= collection_select(:user_id, :id, @users, :id, :name) %>
       </div>
       <div class="col-md-2">
       <%= f.label :photo_url, "Photo URL" %><br>
