--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -15,60 +15,60 @@
     <div class="row">
       <div class="col-md-2 col-md-offset-4">
         <%= f.label :first_name, "First Name*" %><br>
-        <%= f.text_field :first_name %>
+        <%= f.text_field :first_name, {class: "form-control"} %>
       </div>
       <div class="col-md-2">
         <%= f.label :last_name, "Last Name*" %><br>
-        <%= f.text_field :last_name %>
+        <%= f.text_field :last_name, {class: "form-control"} %>
       </div>
     </div><br>
     <div class="row">
       <div class="col-md-2 col-md-offset-4">
         <%= f.label :company, "Company*" %><br>
-        <%= f.text_field :company %>
+        <%= f.text_field :company, {class: "form-control"} %>
       </div>
       <div class="col-md-2">
         <%= f.label :role, "Role*" %><br>
-        <%= f.text_field :role %>
+        <%= f.text_field :role, {class: "form-control"} %>
       </div>
     </div><br>
     <div class="row">
       <div class="col-md-2 col-md-offset-4">
         <%= f.label :email, "Email*" %><br>
-        <%= f.text_field :email %>
+        <%= f.text_field :email, {class: "form-control"} %>
       </div>
       <div class="col-md-2">
         <%= f.label :phone_number, "Phone Number" %><br>
-        <%= f.telephone_field :phone_number %>
+        <%= f.telephone_field :phone_number, {class: "form-control"} %>
       </div>
     </div><br>
     <div class="row">
       <div class="col-md-2 col-md-offset-4">
         <%= f.label :point_person, "Point Person*" %><br>
-        <%= collection_select :user_id, :id, @users, :id, :name, {:prompt => @select_value, :selected => @contact.user_id} %>
+        <%= collection_select :user_id, :id, @users, :id, :name, {:prompt => @select_value, :selected => @contact.user_id}, {class: "form-control"} %>
       </div>
       <div class="col-md-2">
       <%= f.label :photo_url, "Photo URL" %><br>
-      <%= f.text_field :photo_url %>
+      <%= f.text_field :photo_url, {class: "form-control"} %>
     </div>
     </div><br>
     <div class="row">
       <%= f.label :relationship_strength, "Relationship*" %><br>
-          <%= f.radio_button :relationship_strength, 1 %>
-          &#x1F525;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <%= f.radio_button :relationship_strength, 2 %>
-          &#x1F525; &#x1F525;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <%= f.radio_button :relationship_strength, 3 %>
-          &#x1F525; &#x1F525; &#x1F525;
+        <%= f.radio_button :relationship_strength, 1 %>
+        &#x1F525; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <%= f.radio_button :relationship_strength, 2 %>
+        &#x1F525; &#x1F525; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <%= f.radio_button :relationship_strength, 3 %>
+        &#x1F525; &#x1F525; &#x1F525;
     </div><br>
     <div class="row">
       <div class="col-md-2 col-md-offset-4">
         <%= f.label :involvement, "Involvement*" %><br>
-        <%= f.text_area :involvement %>
+        <%= f.text_area :involvement, {class: "form-control"} %>
       </div>
       <div class="col-md-2">
         <%= f.label :open_asks, "Open Asks" %><br>
-        <%= f.text_area :open_asks %>
+        <%= f.text_area :open_asks, {class: "form-control"} %>
       </div>
     </div><br>
     <div class="row">
