--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,23 +11,33 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :first_name, "First Name" %><br>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name, "Last Name" %><br>
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password, "Password" %><br>
-    <%= f.password_field :password %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Submit", :class => "btn btn-success" %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2 col-md-offset-5">
+        <%= f.label :first_name, "First Name" %>
+        <%= f.text_field :first_name, {class: "form-control"} %>
+      </div>
+    </div><br>
+    <div class="row">
+      <div class="col-md-2 col-md-offset-5">
+        <%= f.label :last_name, "Last Name" %>
+        <%= f.text_field :last_name, {class: "form-control"} %>
+      </div>
+    </div><br>
+    <div class="row">
+      <div class="col-md-2 col-md-offset-5">
+        <%= f.label :email %>
+        <%= f.text_field :email, {class: "form-control"} %>
+      </div>
+    </div><br>
+    <div class="row">
+      <div class="col-md-2 col-md-offset-5">
+        <%= f.label :password, "Password" %>
+        <%= f.password_field :password, {class: "form-control"} %>
+      </div>
+    </div><br>
+    <div class="actions">
+      <%= f.submit "Submit", :class => "btn btn-success" %>
+    </div>
   </div>
 <% end %>
