--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,11 @@ body {
     -webkit-animation-timing-function: linear;
 }
 
+h1 {
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
 textarea {
     resize: none;
 }
@@ -63,6 +68,14 @@ thead th.down {
     background-position: right center;
     background-repeat: no-repeat;
     background-color: transparent;
+}
+
+.navbar img {
+  height: 40px;
+}
+
+.navbar-nav li a {
+ line-height: 40px !important;
 }
 
 .row.text-center > div {
