--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
 <div class="navbar-class">
   <div class="container">
     <ul class="nav navbar-nav">
-        <li><a href="/">CORE Contacts</a></li>
+        <li><li><a href="/" class="pull-left"><%= image_tag("logo.png") %></a></li></li>
         <% if @current_user %>
             <li><a href="<%= new_contact_path %>">New Contact</a></li>
             <% if @current_user.admin %>
