--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,10 +83,15 @@ thead th.down {
     float: none;
 }
 
+.center {
+    margin: 0 auto;
+    width: 80%;
+}
+
 .field_with_errors {
-  display: inline-block;
-  float: none;
- }
+    display: inline-block;
+    float: none;
+}
 
  #error_explanation {
     border: none;
