--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -37,5 +37,14 @@
         </tr>
       <% end %>
     </tbody>
-  </table>
+  </table><br>
+
+  <div class="row center">
+    <div class="col-md-2 col-md-offset-6">
+      <%= form_tag import_contacts_path, multipart: true do %>
+        <%= file_field_tag :file %><br>
+        <%= submit_tag "Import", :class => "btn btn-success" %>
+      <% end %>
+    </div>
+  </div><br><br>
 </div>
